--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Created using Storyline 3 - http://www.articulate.com  -->
     <!-- version: 3.3.15007.0 -->
 
-    <title>Ser solidario parte 2 </title>
+    <title>Ser solidario parte 2 v colores</title>
     <style>
         body {
             background: #ffffff;
