--- a/story_flash.html
+++ b/story_flash.html
@@ -3,7 +3,7 @@
 <head>
 <!-- Created using Storyline 3 - http://www.articulate.com  -->
 <!-- version: 3.3.15007.0 -->
-<title>Ser solidario parte 2 </title>
+<title>Ser solidario parte 2 v colores</title>
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 
